セッティング

--- a/lp/resources/src/pug/index.pug
+++ b/lp/resources/src/pug/index.pug
@@ -17,15 +17,15 @@ block content
   div.mv.swiper-container.u_anime-fade(data-slider="mvSlider" data-anime="addClass")
     div.mv_list.swiper-wrapper
       div.mv_list-item.swiper-slide
-        +img(`${_RESOURCES}assets/images/index/mv_1.jpg`, `SWAYLAY`)
+        +img(`${_RESOURCES}assets/images/index/mv_1.jpg`, `time`)
       div.mv_list-item.swiper-slide
-        +img(`${_RESOURCES}assets/images/index/mv_2.jpg`, `SWAYLAY`)
+        +img(`${_RESOURCES}assets/images/index/mv_2.jpg`, `time`)
       div.mv_list-item.swiper-slide
-        +img(`${_RESOURCES}assets/images/index/mv_1.jpg`, `SWAYLAY`)
+        +img(`${_RESOURCES}assets/images/index/mv_3.jpg`, `time`)
       div.mv_list-item.swiper-slide
-        +img(`${_RESOURCES}assets/images/index/mv_2.jpg`, `SWAYLAY`)
+        +img(`${_RESOURCES}assets/images/index/mv_4.jpg`, `time`)
       div.mv_list-item.swiper-slide
-        +img(`${_RESOURCES}assets/images/index/mv_1.jpg`, `SWAYLAY`)
+        +img(`${_RESOURCES}assets/images/index/mv_5.jpg`, `time`)
 
   main(role="main")
     div.t_wrapper.u_bg.indexSwayley.t_flex
