--- a/lp/resources/src/pug/components/include/_navigation.pug
+++ b/lp/resources/src/pug/components/include/_navigation.pug
@@ -1,13 +1,11 @@
 nav.c_header-navigation.c_navigation(data-button-contents="hamburger-button-contents" aria-expanded="false")
-  ul.c_navigation-list.t_Roboto.t_flex
+  ul.c_navigation-list.t_Roboto.t_flex.u_weight600
     li.c_navigation-list-item.u_letter-spacing50
-      a(href="#Story") Story
+      a(href="#Concept") Concept
     li.c_navigation-list-item.u_letter-spacing50
-      a(href="#Innovation") Innovation
+      a(href="#Products") Products
     li.c_navigation-list-item.u_letter-spacing50
-      a(href="#Sustainability") Sustainability
-    li.c_navigation-list-item.u_letter-spacing50
-      a(href="#Lineup") Lineup
+      a(href="#Functions") Functions
     li.c_navigation-list-item.u_letter-spacing50
       a(href="#Shop") Shop
     li.c_navigation-list-item.u_letter-spacing50
