--- a/lp/resources/src/pug/index.pug
+++ b/lp/resources/src/pug/index.pug
@@ -31,34 +31,27 @@ block content
     div.t_wrapper.u_bg.indexSwayley.t_flex
       div.indexSwayley_view.t_flex
         div.indexSwayley_title
-          h2.indexSwayley_title-jp.u_letter-spacing200 すこし未来のソファ
-          p.indexSwayley_title-en.t_Roboto.u_weight100.u_letter-spacing50 Little futuristic sofa
-        p.indexSwayley_name.t_Roboto.u_letter-spacing200.u_weight400 SWAYLEY
+          h2.indexSwayley_title-jp.u_letter-spacing200.u_weight600 時を超えるひととき
+          p.indexSwayley_title-en.t_Roboto.u_weight100.u_letter-spacing50 Timeless Moments
+        p.indexSwayley_name.t_Roboto.u_letter-spacing200.u_weight600 TIME
       div.indexSwayley_scroll.t_flex
-        p.indexSwayley_scroll-text.u_weight100.u_letter-spacing50.t_Roboto Scroll Down
+        p.indexSwayley_scroll-text.u_weight500.u_letter-spacing50.t_Roboto Scroll Down
         span.indexSwayley_scroll-line
     div.indexStory#Story
       div.p_background.t_wrapper.indexStory_wrapper
         div.p_background-wrapper
-          h2.indexStory_title.t_Roboto.u_letter-spacing100.u_weight100.u_anime-fadeUp(data-anime="addClass") Story
-          h3.indexStory_headline.u_letter-spacing200.u_anime-fadeUp(data-anime="addClass")
+          h2.indexStory_title.t_RobotoSlab.u_letter-spacing100.u_weight100.u_anime-fadeUp(data-anime="addClass") Concept
+          h3.indexStory_headline.u_letter-spacing200.u_anime-fadeUp.u_weight600(data-anime="addClass")
             span
-              |すこし未来の
-              br.u_md
-              |豊かな⽇常をつくる
+              |半世紀の時を感じ、時を超える⾄福の時間の創造
           div.indexStory_text.u_lineHeightLarge.u_letter-spacing150.u_anime-fadeUp(data-anime="addClass")
-            | つくり手からつかい手、
-            br.u_md
-            |みんなの手で幸せな生活空間を
-            br.u_md
-            |つくり出すという願いを込めた、
+            | ファニチャーブランド『TIME-タイム-』は、
             br
-            | すこし未来の豊かな⽇常をつくる国内製高品質ソファ、SWAYLEY
+            | 20世紀半ば（1940〜60年代）の、いわゆるミッドセンチュリーのデザインを踏襲し、
             br
-            | SWAY＝『ゆらぎ』『波長』
+            | 現代の製産技術で耐久性をもたせ、⻑い時間、何世代にも渡り楽しんでいただける、
             br
-            | LEY＝『耕す』
-
+            | 時間軸デザイン（タイムアクシス・デザイン）の家具をご提案いたします。
     div.indexOffer
       div.indexOffer_images
         +img(`${_RESOURCES}assets/images/index/img_story_1.jpg`, `Story01`)
