--- a/lp/resources/src/sass/app/configs/_variables.scss
+++ b/lp/resources/src/sass/app/configs/_variables.scss
@@ -17,6 +17,9 @@ $font: (
     Roboto: (
       'Roboto', sans-serif,
     ),
+    RobotoSlab: (
+      'Roboto Slab', sans-serif,
+    ),
   ),
 );
 
