--- a/lp/resources/src/sass/app/components/_header.scss
+++ b/lp/resources/src/sass/app/components/_header.scss
@@ -36,7 +36,7 @@
       width: 100%;
       height: 100%;
       content: "";
-      background: #F2F2F0;
+      background: #E3E0D8;
       z-index: 1;
       opacity: 0;
       transition: 0.5s all var(--transition);
@@ -44,7 +44,7 @@
     &-logo {
       position: relative;
       z-index: 2;
-      width: 158px;
+      width: 90px;
       transition: 0.5s all var(--transition);
       @include mq(m){
         width: 120px;
