--- a/lp/resources/src/pug/index.pug
+++ b/lp/resources/src/pug/index.pug
@@ -504,6 +504,12 @@ block content
                       | 無難な色だと物足りない方、ほどよく部屋に彩りを添えたい方にオススメ。
 
 
+            div.p_slider-option.t_flex
+              button(type="button" aria-label="戻る" data-slider-button="lineup-button-prev").p_slider-option-arrow.p_slider-option-arrow__prev
+                i.icon-arrow_left
+              div.p_slider-option-number.t_flex.t_Roboto.u_letter-spacing100(data-slider-pagination="lineup-pagination")
+              button(type="button" aria-label="進む" data-slider-button="lineup-button-next").p_slider-option-arrow.p_slider-option-arrow__next
+                i.icon-arrow_right
       div.p_spec.u_anime-fadeUp(data-anime="addClass")
         div.t_wrapper.p_spec-wrapper.t_inner
           p.p_spec-title.u_weight400.u_letter-spacing100.t_Roboto SPEC
@@ -676,6 +682,12 @@ block content
                             | 無難な色だと物足りない方、ほどよく部屋に彩りを添えたい方にオススメ。
 
 
+                  div.p_slider-option.t_flex
+                    button(type="button" aria-label="戻る" data-slider-button="lineup-button-prev").p_slider-option-arrow.p_slider-option-arrow__prev
+                      i.icon-arrow_left
+                    div.p_slider-option-number.t_flex.t_Roboto.u_letter-spacing100(data-slider-pagination="lineup-pagination")
+                    button(type="button" aria-label="進む" data-slider-button="lineup-button-next").p_slider-option-arrow.p_slider-option-arrow__next
+                      i.icon-arrow_right
             div.p_spec
               div.t_wrapper.p_spec-wrapper.t_inner
                 p.p_spec-title.u_weight400.u_letter-spacing100.t_Roboto SPEC
