--- a/resources/src/sass/app.scss
+++ b/resources/src/sass/app.scss
@@ -27,6 +27,8 @@
 @import "app/parts/subject";
 @import "app/parts/thumbnailTabs";
 @import "app/parts/ohterItem";
+@import "app/parts/productsTitle";
+@import "app/parts/lineup";
 
 // components
 @import "app/components/header";
