--- a/resources/src/pug/templates/_app.pug
+++ b/resources/src/pug/templates/_app.pug
@@ -7,6 +7,9 @@ include /vendor/_img
 doctype
 html(lang="ja")
   head(prefix="og:http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#")
+
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-N9H5F7C');</script>
+
     meta(name="viewport" content="width=device-width,initial-scale=1")
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
@@ -65,7 +68,7 @@ html(lang="ja")
     .
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600&family=Roboto:wght@400;500:600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
 
     //- css
@@ -78,6 +81,7 @@ html(lang="ja")
 
   body(class=_PAGENAME === "home" && "isHome")
 
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N9H5F7C" height="0" width="0" style="display:none;visibility:hidden"></iframe>
 
     //- content
     block content
