--- a/resources/src/sass/app/parts/_gui.scss
+++ b/resources/src/sass/app/parts/_gui.scss
@@ -1,22 +1,16 @@
 .p_gui {
   margin-bottom: 80px;
+  justify-content: center;
   @include mq(m){
     margin-bottom: 50px;
   }
   &-list {
-    padding: 0 65px 0 0;
-    border-right: 1px solid #D8D8D6;
+    padding: 0 40px;
+    border-right: 1px solid #C1BEB7;
     align-items: center;
     position: relative;
     @include mq(m){
       padding: 0 30px 0 0;
-    }
-    &:nth-child(2n) {
-      padding: 0 0 0 65px;
-      border-right: none;
-      @include mq(m){
-        padding: 0 0 0 30px;
-      }
     }
     &.__isActive {
       button {
@@ -28,7 +22,7 @@
             bottom: -10px;
             width: 100%;
             height: 2px;
-            background: var(--main-color);
+            background: black;
             content: "";
           }
         }
@@ -36,8 +30,9 @@
     }
     button {
       display: block;
-      font-size: 15px;
+      font-size: 16px;
       width: 100%;
+      font-style:inherit;
       @include mq(m){
         font-size: 13px;
       }
