--- a/resources/src/sass/app/parts/_spec.scss
+++ b/resources/src/sass/app/parts/_spec.scss
@@ -12,9 +12,9 @@
   }
   &-item {
     &-list {
-      border-top: 1px solid #BFBFBD;
+      border-top: 1px solid var(--main-color);
       &:last-child {
-        border-bottom: 1px solid #BFBFBD;
+        border-bottom: 1px solid var(--main-color);
       }
       dl,p {
         padding: 20px 0;
@@ -32,6 +32,9 @@
           width: calc(100% - 115px);
           @include mq(m){
             width: 100%;
+            font-size: 12px;
+          }
+          small {
             font-size: 12px;
           }
         }
