--- a/resources/src/sass/app.scss
+++ b/resources/src/sass/app.scss
@@ -29,6 +29,7 @@
 @import "app/parts/ohterItem";
 @import "app/parts/productsTitle";
 @import "app/parts/lineup";
+@import "app/parts/gallery";
 
 // components
 @import "app/components/header";
