--- a/resources/src/pug/components/include/_openNav.pug
+++ b/resources/src/pug/components/include/_openNav.pug
@@ -2,29 +2,17 @@ div.c_openNav(data-button-contents="hamburger-button-contents" aria-expanded="fa
   div.c_openNav-contents.t_inner
     ul.c_openNav-list.t_Roboto
       li.c_openNav-list-item.u_letter-spacing50
-        a(href="#Story" data-button="hamburger-button" aria-expanded="false") Story
+        a(href="#Concept" data-button="hamburger-button" aria-expanded="false") Concept
       li.c_openNav-list-item.u_letter-spacing50
-        a(href="#Innovation" data-button="hamburger-button" aria-expanded="false") Innovation
+        a(href="#Products" data-button="hamburger-button" aria-expanded="false") Products
       li.c_openNav-list-item.u_letter-spacing50
-        a(href="#Sustainability" data-button="hamburger-button" aria-expanded="false") Sustainability
-      li.c_openNav-list-item.u_letter-spacing50
-        a(href="#Lineup" data-button="hamburger-button" aria-expanded="false") Lineup
-      li.c_openNav-list-item.u_letter-spacing50
-        a(href="#Shop" data-button="hamburger-button" aria-expanded="false") Shop
+        a(href="#Functions" data-button="hamburger-button" aria-expanded="false") Functions
       li.c_openNav-list-item.u_letter-spacing50
         a(href="#Support" data-button="hamburger-button" aria-expanded="false") Support
     ul.c_openNav-sns.t_flex
       li.c_openNav-sns-item
-        a(href="#" target="_blank")
+        a(href="https://www.instagram.com/time_furniture/" target="_blank")
           i.icon-Instagram
-      li.c_openNav-sns-item
-        a(href="#" target="_blank")
-          i.icon-twitter
-      li.c_openNav-sns-item
-        a(href="#" target="_blank")
-          i.icon-facebook
-      li.c_openNav-sns-item
-        a(href="#" target="_blank")
-          i.icon-pinterest
+
 
   div.c_openNav-bg(data-button-bg="hamburger-button-bg")
