--- a/resources/src/sass/app/parts/_definition.scss
+++ b/resources/src/sass/app/parts/_definition.scss
@@ -27,7 +27,12 @@
       }
     }
     dd {
-
+      small {
+        font-size: 12px;
+      }
+      div {
+        margin-bottom: 10px;
+      }
     }
   }
 }
