--- a/resources/src/pug/components/include/_hamburger.pug
+++ b/resources/src/pug/components/include/_hamburger.pug
@@ -1,4 +1,4 @@
-button.c_header-hamburger.c_hamburger(type="button" data-button="hamburger-button" aria-expanded="false")
+button.c_header-hamburger.c_hamburger(type="button" data-button="hamburger-button" aria-expanded="false" aria-label="メニュー")
   ul.c_hamburger-list
     li.c_hamburger-list-item
     li.c_hamburger-list-item
