--- a/resources/src/sass/app/components/_header.scss
+++ b/resources/src/sass/app/components/_header.scss
@@ -15,7 +15,7 @@
       padding: 15px 8%;
     }
     &.__isActive {
-      border-bottom: 1px solid #F2F2F0;
+      border-bottom: 1px solid var(--main-color);
       &:after {
         opacity: 1;
       }
@@ -47,7 +47,7 @@
       width: 90px;
       transition: 0.5s all var(--transition);
       @include mq(m){
-        width: 120px;
+        width: 71px;
       }
       &-link {
         display: block;
