--- a/resources/src/sass/app/parts/_thumbnailTabs.scss
+++ b/resources/src/sass/app/parts/_thumbnailTabs.scss
@@ -6,6 +6,7 @@
     @include mq(m){
       display: flex;
       flex-direction: column-reverse;
+      padding: 0 40px;
     }
   }
   &-contents {
