--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -32,7 +32,7 @@ block content
       div.indexSwayley_view.t_flex
         div.indexSwayley_title
           h2.indexSwayley_title-jp.u_letter-spacing200.u_weight600 時を超えるひととき
-          p.indexSwayley_title-en.t_Roboto.u_weight100.u_letter-spacing50 Timeless Moments
+          p.indexSwayley_title-en.t_Roboto.u_weight500.u_letter-spacing50 Timeless Moments
         p.indexSwayley_name.t_Roboto.u_letter-spacing200.u_weight600 TIME
       div.indexSwayley_scroll.t_flex
         p.indexSwayley_scroll-text.u_weight500.u_letter-spacing50.t_Roboto Scroll Down
@@ -43,7 +43,11 @@ block content
           h2.indexStory_title.t_RobotoSlab.u_letter-spacing100.u_weight100.u_anime-fadeUp(data-anime="addClass") Concept
           h3.indexStory_headline.u_letter-spacing200.u_anime-fadeUp.u_weight600(data-anime="addClass")
             span
-              |半世紀の時を感じ、時を超える⾄福の時間の創造
+              |半世紀の時を感じ、
+              br.u_md
+              |時を超える
+              br.u_md
+              |⾄福の時間の創造
           div.indexStory_text.u_lineHeightLarge.u_letter-spacing150.u_anime-fadeUp(data-anime="addClass")
             | ファニチャーブランド『TIME-タイム-』は、
             br
@@ -71,6 +75,7 @@ block content
                   | 『TIME』は20世紀半ば（1940〜60年代）、ミッドセンチュリーを感じさせるデザインブランドです。どこか懐かしく、あたたかさを感じる⾼級感。⽊の上質感。ツヤ感を表現し、幅広い世代に親しんでいただけるような設計です。
                   br
                   | ⾊や縫製などに⾄るまでこだわり、どの空間のインテリアにもあう、ビンテージでシンプルな飽きのこないデザインを⽬指しました。
+
     div.indexShape
       div.indexShape_body
         div.indexShape_images.t_flex
@@ -226,7 +231,7 @@ block content
                         dt.u_letter-spacing50.u_weight500 fabric
                         dd.u_letter-spacing50 アクリル42%、ポリエステル39%、コットン19%（リサイクル糸47%）
 
-            a.p_otherItem(href="#Lineup")
+            a.p_otherItem(href="#Products")
               span.p_otherItem-icon.t_flex
                 i.icon-arrow_dawn
               span.p_otherItem-text.u_letter-spacing50 他のアイテムを見る
@@ -526,10 +531,10 @@ block content
 
 
 
-    div.p_lineup
+    div.p_lineup#Interior
       div.t_wrapper
         p.u_letter-spacing100.t_RobotoSlab.u_weight500.p_productsTitle INTERIOR
-        ul.p_gui.t_flex.t_Roboto(data-tab-target="item")
+        ul.p_gui.t_flex.t_Roboto.p_gui__three(data-tab-target="item")
           li.p_gui-list.__isActive
             button(type="button").u_letter-spacing50.u_weight600
               span cafe table
@@ -736,7 +741,7 @@ block content
                     br
                     small 北海道産ミズナラ三等材無垢／オイル塗装
 
-      a.p_otherItem(href="#Shop")
+      a.p_otherItem(href="#Interior")
         span.p_otherItem-icon.t_flex
           i.icon-arrow_dawn
         span.p_otherItem-text.u_letter-spacing50 他のアイテムを見る
@@ -778,7 +783,9 @@ block content
                   span.p_innovation-header-name-text.u_vertical.u_letter-spacing100.t_Roboto.u_weight500 Functions
                   span.p_innovation-header-name-number.t_Roboto 1
                 h2.u_weight600.u_vertical.p_innovation-header-title.u_letter-spacing150.u_anime-fadeUp(data-anime="addClass")
-                  | どこか懐かしいミッドセンチュリーのぬくもり。
+                  |どこか懐かしい
+                  br.u_md
+                  |ミッドセンチュリーのぬくもり。
               div.p_innovation-contents
                 div.p_innovation-contents-images
                   figure.u_anime-fadeUp(data-anime="addClass")
@@ -787,7 +794,9 @@ block content
                   dl
                     dt
                       p.u_weight600.u_letter-spacing150
-                        | シンプルに。上質に。どの世代にも親和性のあるデザイン。
+                        | シンプルに。上質に。
+                        br.u_md
+                        |どの世代にも親和性のあるデザイン。
                     dd.u_lineHeight.u_weight500
                       |20世紀半ば（1940～60年代）のミッドセンチュリーデザインには、その時代を生きた人のライフスタイルを感じさせる懐かしさやぬくもりがあります。自由で斬新な雰囲気をもちあわせながら、ハイセンスなレトロフューチャーなライフスタイルを演出します。
                   dl
@@ -904,6 +913,10 @@ block content
                     dd.u_lineHeight.u_weight500
                       | TIMEの家具を使う皆様のかけがえのない時間を、最もくつろげる良い時間。さらには、皆様の一番好きな時間にしていただけるよう、材料から生産まで、国内製にこだわりました。日本で生まれた材料、部材にこだわり、日本の職人の手で丈夫に、そして丁寧に作り上げました。確かな品質で、長い間劣化が少なく使用していただける、時間を超えた愛着のミッドセンチュリーデザイン家具です。
 
+        a.p_otherItem(href="#Functions")
+          span.p_otherItem-icon.t_flex
+            i.icon-arrow_dawn
+          span.p_otherItem-text.u_letter-spacing50 他の特徴を見る
     ul.p_gallery.t_flex
       li.p_gallery-list
         +img(`${_RESOURCES}assets/images/index/img_gallery_b_list_1.jpg`, `time`)
