--- a/resources/src/sass/app/parts/_gui.scss
+++ b/resources/src/sass/app/parts/_gui.scss
@@ -4,6 +4,15 @@
   @include mq(m){
     margin-bottom: 50px;
   }
+  &__three {
+    @include mq(m){
+      justify-content: left;
+      .p_gui-list {
+        width: 33%;
+        margin-bottom: 20px;
+      }
+    }
+  }
   &__left {
     justify-content: left;
     .p_gui-list {
@@ -19,7 +28,7 @@
     align-items: center;
     position: relative;
     @include mq(m){
-      padding: 0 30px 0 0;
+      padding: 0 10px;
     }
     &.__isActive {
       button {
@@ -30,7 +39,7 @@
             left: 0;
             bottom: -10px;
             width: 100%;
-            height: 2px;
+            height: 3px;
             background: black;
             content: "";
           }
@@ -43,7 +52,7 @@
       width: 100%;
       font-style:inherit;
       @include mq(m){
-        font-size: 13px;
+        font-size: 12px;
       }
       span {
         display: inline-block;
