--- a/resources/src/sass/app.scss
+++ b/resources/src/sass/app.scss
@@ -30,6 +30,7 @@
 @import "app/parts/productsTitle";
 @import "app/parts/lineup";
 @import "app/parts/gallery";
+@import "app/parts/logoVisual";
 
 // components
 @import "app/components/header";
