--- a/resources/src/sass/app/parts/_tabs.scss
+++ b/resources/src/sass/app/parts/_tabs.scss
@@ -38,11 +38,16 @@
       color: var(--main-color);
       line-height: 1;
       font-size: 15px;
+      transition: 0.5s all var(--transition);
       @include mq(m){
         font-size: 11px;
         padding: 15px;
         height: 100%;
         line-height: 1.4;
+      }
+      &:hover {
+        background: black;
+        color: white;
       }
       &:after {
         transition: 0.5s all var(--transition);
