--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -198,9 +198,9 @@ block content
                               +img(`${_RESOURCES}assets/images/index/img_colors_3.jpg`, `GREEN`)
                           div.p_slider-list-item-view-text.u_lineHeight.u_letter-spacing50
                             p
-                              | すこし黄みがかったナチュラルな色合い。
+                              | ブルーデニムのヴィンテージなインディゴの色合い。
                               br
-                              | 他の家具と調和しつつ、落ち着いたやさしい雰囲気に。
+                              | 懐かしい表情とモダンでレトロな演出で、リビングの主役に。
 
 
                       //スライド3
@@ -216,9 +216,9 @@ block content
                               +img(`${_RESOURCES}assets/images/index/img_colors_2.jpg`, `GREEN`)
                           div.p_slider-list-item-view-text.u_lineHeight.u_letter-spacing50
                             p
-                              | すこし黄みがかったナチュラルな色合い。
+                              | ヴィンテージな品のある色合いのグリーン。
                               br
-                              | 他の家具と調和しつつ、落ち着いたやさしい雰囲気に。
+                              | お部屋に映える印象的でハイセンスなワンポイントアイテムに。
 
 
                     div.p_slider-option.t_flex
@@ -276,9 +276,9 @@ block content
                               +img(`${_RESOURCES}assets/images/index/img_colors_1.jpg`, `BEIGE`)
                           div.p_slider-list-item-view-text.u_lineHeight.u_letter-spacing50
                             p
-                              | ヴィンテージな品のある色合いのグリーン。
+                              | すこし黄みがかったナチュラルな色合い。
                               br
-                              | お部屋に映える印象的でハイセンスなワンポイントアイテムに。
+                              | 他の家具と調和しつつ、落ち着いたやさしい雰囲気に。
                       //スライド2
                       div.swiper-slide.p_slider-list-item
                         div.p_slider-list-item-imgaes
@@ -310,9 +310,9 @@ block content
                               +img(`${_RESOURCES}assets/images/index/img_colors_3.jpg`, `blue`)
                           div.p_slider-list-item-view-text.u_lineHeight.u_letter-spacing50
                             p
-                              | ヴィンテージな品のある色合いのグリーン。
+                              | ブルーデニムのヴィンテージなインディゴの色合い。
                               br
-                              | お部屋に映える印象的でハイセンスなワンポイントアイテムに。
+                              | 懐かしい表情とモダンでレトロな演出で、リビングの主役に。
 
 
                     div.p_slider-option.t_flex
@@ -340,7 +340,7 @@ block content
                         dt.u_letter-spacing50.u_weight500 fabric
                         dd.u_letter-spacing50 アクリル42%、ポリエステル39%、コットン19%（リサイクル糸47%）
 
-            a.p_otherItem(href="#Lineup")
+            a.p_otherItem(href="#Products")
               span.p_otherItem-icon.t_flex
                 i.icon-arrow_dawn
               span.p_otherItem-text.u_letter-spacing50 他のアイテムを見る
@@ -371,9 +371,9 @@ block content
                               +img(`${_RESOURCES}assets/images/index/img_colors_2.jpg`, `GREEN`)
                           div.p_slider-list-item-view-text.u_lineHeight.u_letter-spacing50
                             p
-                              | ブルーデニムのヴィンテージなインディゴの色合い。
+                              | ヴィンテージな品のある色合いのグリーン。
                               br
-                              | 懐かしい表情とモダンでレトロな演出で、リビングの主役に。
+                              | お部屋に映える印象的でハイセンスなワンポイントアイテムに。
 
 
                       //スライド2
@@ -407,9 +407,9 @@ block content
                               +img(`${_RESOURCES}assets/images/index/img_colors_1.jpg`, `BEIGE`)
                           div.p_slider-list-item-view-text.u_lineHeight.u_letter-spacing50
                             p
-                              | ブルーデニムのヴィンテージなインディゴの色合い。
+                              | すこし黄みがかったナチュラルな色合い。
                               br
-                              | 懐かしい表情とモダンでレトロな演出で、リビングの主役に。
+                              | 他の家具と調和しつつ、落ち着いたやさしい雰囲気に。
 
 
                     div.p_slider-option.t_flex
@@ -437,7 +437,7 @@ block content
                         dt.u_letter-spacing50.u_weight500 fabric
                         dd.u_letter-spacing50 アクリル42%、ポリエステル39%、コットン19%（リサイクル糸47%）
 
-            a.p_otherItem(href="#Lineup")
+            a.p_otherItem(href="#Products")
               span.p_otherItem-icon.t_flex
                 i.icon-arrow_dawn
               span.p_otherItem-text.u_letter-spacing50 他のアイテムを見る
@@ -470,9 +470,9 @@ block content
                               +img(`${_RESOURCES}assets/images/index/img_colors_3.jpg`, `BLUE`)
                           div.p_slider-list-item-view-text.u_lineHeight.u_letter-spacing50
                             p
-                              | すこし黄みがかったナチュラルな色合い。
+                              | ブルーデニムのヴィンテージなインディゴの色合い。
                               br
-                              | 他の家具と調和しつつ、落ち着いたやさしい雰囲気に。
+                              | 懐かしい表情とモダンでレトロな演出で、リビングの主役に。
 
 
                       //スライド2
@@ -506,9 +506,9 @@ block content
                               +img(`${_RESOURCES}assets/images/index/img_colors_2.jpg`, `GREEN`)
                           div.p_slider-list-item-view-text.u_lineHeight.u_letter-spacing50
                             p
-                              | すこし黄みがかったナチュラルな色合い。
+                              | ヴィンテージな品のある色合いのグリーン。
                               br
-                              | 他の家具と調和しつつ、落ち着いたやさしい雰囲気に。
+                              | お部屋に映える印象的でハイセンスなワンポイントアイテムに。
 
                     div.p_slider-option.t_flex
                       button(type="button" aria-label="戻る" data-slider-button="lineup-button-prev").p_slider-option-arrow.p_slider-option-arrow__prev
@@ -535,7 +535,7 @@ block content
                         dt.u_letter-spacing50.u_weight500 fabric
                         dd.u_letter-spacing50 アクリル42%、ポリエステル39%、コットン19%（リサイクル糸47%）
 
-            a.p_otherItem(href="#Lineup")
+            a.p_otherItem(href="#Products")
               span.p_otherItem-icon.t_flex
                 i.icon-arrow_dawn
               span.p_otherItem-text.u_letter-spacing50 他のアイテムを見る
@@ -794,9 +794,10 @@ block content
                   span.p_innovation-header-name-text.u_vertical.u_letter-spacing100.t_Roboto.u_weight500 Functions
                   span.p_innovation-header-name-number.t_Roboto 1
                 h2.u_weight600.u_vertical.p_innovation-header-title.u_letter-spacing150.u_anime-fadeUp(data-anime="addClass")
-                  |どこか懐かしい
-                  br.u_md
-                  |ミッドセンチュリーのぬくもり。
+                  picture
+                    source(media=`(min-width:769px)` srcset!=`${_RESOURCES}assets/images/index/functions_title_1.svg`)
+                    source(media=`(max-width:768px)` srcset!=`${_RESOURCES}assets/images/mobile/index/functions_title_1.svg`)
+                    +img(`${_RESOURCES}assets/images/index/functions_title_1.svg`, `どこか懐かしいミッドセンチュリーのぬくもり。`)
               div.p_innovation-contents
                 div.p_innovation-contents-images
                   figure.u_anime-fadeUp(data-anime="addClass")
@@ -825,9 +826,10 @@ block content
                   span.p_innovation-header-name-text.u_vertical.u_letter-spacing100.t_Roboto.u_weight500 Functions
                   span.p_innovation-header-name-number.t_Roboto 2
                 h2.u_weight600.u_vertical.p_innovation-header-title.u_letter-spacing150
-                  | 材質にも環境配慮にも、
-                  br.u_md
-                  |できる限りのこだわりを。
+                  picture
+                    source(media=`(min-width:769px)` srcset!=`${_RESOURCES}assets/images/index/functions_title_2.svg`)
+                    source(media=`(max-width:768px)` srcset!=`${_RESOURCES}assets/images/mobile/index/functions_title_2.svg`)
+                    +img(`${_RESOURCES}assets/images/index/functions_title_2.svg`, `材質にも環境配慮にも、できる限りのこだわりを。`)
               div.p_innovation-contents
                 div.p_innovation-contents-images
                   figure
@@ -853,11 +855,10 @@ block content
                   span.p_innovation-header-name-text.u_vertical.u_letter-spacing100.t_Roboto.u_weight500 Functions
                   span.p_innovation-header-name-number.t_Roboto 3
                 h2.u_weight600.u_vertical.p_innovation-header-title.u_letter-spacing150
-                  | メイドイン 瀬戸内。
-                  br.u_md
-                  |香川の家具職人が
-                  br.u_md
-                  |つくる木製のアイテム。
+                  picture
+                    source(media=`(min-width:769px)` srcset!=`${_RESOURCES}assets/images/index/functions_title_3.svg`)
+                    source(media=`(max-width:768px)` srcset!=`${_RESOURCES}assets/images/mobile/index/functions_title_3.svg`)
+                    +img(`${_RESOURCES}assets/images/index/functions_title_3.svg`, `メイドイン 瀬戸内。香川の家具職人がつくる木製のアイテム。`)
               div.p_innovation-contents
                 div.p_innovation-contents-images
                   figure
@@ -877,9 +878,10 @@ block content
                   span.p_innovation-header-name-text.u_vertical.u_letter-spacing100.t_Roboto.u_weight500 Functions
                   span.p_innovation-header-name-number.t_Roboto 4
                 h2.u_weight600.u_vertical.p_innovation-header-title.u_letter-spacing150
-                  |高品質ウレタンを使用した、
-                  br.u_md
-                  |時を忘れる座り心地。
+                  picture
+                    source(media=`(min-width:769px)` srcset!=`${_RESOURCES}assets/images/index/functions_title_4.svg`)
+                    source(media=`(max-width:768px)` srcset!=`${_RESOURCES}assets/images/mobile/index/functions_title_4.svg`)
+                    +img(`${_RESOURCES}assets/images/index/functions_title_4.svg`, `高品質ウレタンを使用した、時を忘れる座り心地。`)
               div.p_innovation-contents
                 div.p_innovation-contents-images
                   figure
@@ -899,9 +901,10 @@ block content
                   span.p_innovation-header-name-text.u_vertical.u_letter-spacing100.t_Roboto.u_weight500 Functions
                   span.p_innovation-header-name-number.t_Roboto 5
                 h2.u_weight600.u_vertical.p_innovation-header-title.u_letter-spacing150
-                  | サスティナブル生地は、
-                  br.u_md
-                  |モノを大切にする日本の文化。
+                  picture
+                    source(media=`(min-width:769px)` srcset!=`${_RESOURCES}assets/images/index/functions_title_5.svg`)
+                    source(media=`(max-width:768px)` srcset!=`${_RESOURCES}assets/images/mobile/index/functions_title_5.svg`)
+                    +img(`${_RESOURCES}assets/images/index/functions_title_5.svg`, `サスティナブル生地は、モノを大切にする日本の文化。`)
               div.p_innovation-contents
                 div.p_innovation-contents-images
                   figure
@@ -921,13 +924,14 @@ block content
                   span.p_innovation-header-name-text.u_vertical.u_letter-spacing100.t_Roboto.u_weight500 Functions
                   span.p_innovation-header-name-number.t_Roboto 6
                 h2.u_weight600.u_vertical.p_innovation-header-title.u_letter-spacing150
-                  |国内製にこだわった、
-                  br.u_md
-                  |本生まれの高品質家具。
+                  picture
+                    source(media=`(min-width:769px)` srcset!=`${_RESOURCES}assets/images/index/functions_title_6.svg`)
+                    source(media=`(max-width:768px)` srcset!=`${_RESOURCES}assets/images/mobile/index/functions_title_6.svg`)
+                    +img(`${_RESOURCES}assets/images/index/functions_title_6.svg`, `国内製にこだわった、本生まれの高品質家具。`)
               div.p_innovation-contents
                 div.p_innovation-contents-images
                   figure
-                    +img(`${_RESOURCES}assets/images/index/img_innovation_list_6.jpg`, `サスティナブル生地は、モノを大切にする日本の文化。`)
+                    +img(`${_RESOURCES}assets/images/index/img_innovation_list_6.jpg`, `国内製にこだわった、本生まれの高品質家具。`)
                 div.p_definition
                   dl
                     dt
