--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -610,7 +610,7 @@ block content
                   | 独自のR曲線からなる形状と丸みを帯びた面により、活動的な動線の中において、家具との接触など  和らげてくれるのもこのアイテムの特徴です。
           div.p_thumbnailTabs
             div.t_inner.p_thumbnailTabs-body
-              ul.p_thumbnailTabs-list(data-tab-target="item-sub")
+              ul.p_thumbnailTabs-list(data-tab-target="item-sub2")
                 li.p_thumbnailTabs-list-item.__isActive
                   button(type="button" aria-label="単品写真")
                     +img(`${_RESOURCES}assets/images/index/img_table_b_list_1.jpg`, `living table`)
@@ -621,7 +621,7 @@ block content
                   button(type="button" aria-label="ヨリ2")
                     +img(`${_RESOURCES}assets/images/index/img_table_b_list_3.jpg`, `living table`)
 
-              div.p_thumbnailTabs-contents(data-tab-contents="item-sub")
+              div.p_thumbnailTabs-contents(data-tab-contents="item-sub2")
                 div.p_thumbnailTabs-images
                   +img(`${_RESOURCES}assets/images/index/img_table_b_list_1.jpg`, `living table`)
                 div.p_thumbnailTabs-images
@@ -648,7 +648,7 @@ block content
                   | コンパクトなサイズですがしっかり大型のTV設置ができます。扉が引き戸式になっているので、ボードの前に移動しての整理などが便利です。脚部の高さもスタイリッシュに確保されていますので、電動掃除機などでの清掃もスムーズです。
           div.p_thumbnailTabs
             div.t_inner.p_thumbnailTabs-body
-              ul.p_thumbnailTabs-list(data-tab-target="item-sub")
+              ul.p_thumbnailTabs-list(data-tab-target="item-sub3")
                 li.p_thumbnailTabs-list-item.__isActive
                   button(type="button" aria-label="単品写真")
                     +img(`${_RESOURCES}assets/images/index/img_table_c_list_1.jpg`, `tv140 board`)
@@ -659,7 +659,7 @@ block content
                   button(type="button" aria-label="ヨリ2")
                     +img(`${_RESOURCES}assets/images/index/img_table_c_list_3.jpg`, `tv140 board`)
 
-              div.p_thumbnailTabs-contents(data-tab-contents="item-sub")
+              div.p_thumbnailTabs-contents(data-tab-contents="item-sub3")
                 div.p_thumbnailTabs-images
                   +img(`${_RESOURCES}assets/images/index/img_table_c_list_1.jpg`, `tv140 board`)
                 div.p_thumbnailTabs-images
@@ -686,7 +686,7 @@ block content
                   | 部屋のどのスペースにおいても活躍できるのがこのスタイリッシュなシェルフです。本や小物、シェルフ空間が空洞なので、グリーンなどを置いてハイセンスなインテリアに。
           div.p_thumbnailTabs
             div.t_inner.p_thumbnailTabs-body
-              ul.p_thumbnailTabs-list(data-tab-target="item-sub")
+              ul.p_thumbnailTabs-list(data-tab-target="item-sub4")
                 li.p_thumbnailTabs-list-item.__isActive
                   button(type="button" aria-label="単品写真")
                     +img(`${_RESOURCES}assets/images/index/img_table_d_list_1.jpg`, `shelf 70`)
@@ -697,7 +697,7 @@ block content
                   button(type="button" aria-label="ヨリ2")
                     +img(`${_RESOURCES}assets/images/index/img_table_d_list_3.jpg`, `shelf 70`)
 
-              div.p_thumbnailTabs-contents(data-tab-contents="item-sub")
+              div.p_thumbnailTabs-contents(data-tab-contents="item-sub4")
                 div.p_thumbnailTabs-images
                   +img(`${_RESOURCES}assets/images/index/img_table_d_list_1.jpg`, `shelf 70`)
                 div.p_thumbnailTabs-images
@@ -724,7 +724,7 @@ block content
                   | 軽くて持ち運びしやすいため、場所を選ばず、気楽に座って使えるスツールです。しっかり安定感のある安心安全な設計で、時にはソファの横に置くサイドテーブルとしても、フラワースタンドとしても使えます。
           div.p_thumbnailTabs
             div.t_inner.p_thumbnailTabs-body
-              ul.p_thumbnailTabs-list(data-tab-target="item-sub")
+              ul.p_thumbnailTabs-list(data-tab-target="item-sub5")
                 li.p_thumbnailTabs-list-item.__isActive
                   button(type="button" aria-label="単品写真")
                     +img(`${_RESOURCES}assets/images/index/img_table_e_list_1.jpg`, `stool`)
@@ -735,7 +735,7 @@ block content
                   button(type="button" aria-label="ヨリ2")
                     +img(`${_RESOURCES}assets/images/index/img_table_e_list_3.jpg`, `stool`)
 
-              div.p_thumbnailTabs-contents(data-tab-contents="item-sub")
+              div.p_thumbnailTabs-contents(data-tab-contents="item-sub5")
                 div.p_thumbnailTabs-images
                   +img(`${_RESOURCES}assets/images/index/img_table_e_list_1.jpg`, `stool`)
                 div.p_thumbnailTabs-images
